--- a/vistas/css/styles.css
+++ b/vistas/css/styles.css
@@ -1,5 +1,5 @@
 .cursos{
-    width: 17rem !important;
+    /* width: 25em !important; */
     cursor: pointer !important;
     margin: 0 0.5rem !important;
 }
