--- a/vistas/css/styles.css
+++ b/vistas/css/styles.css
@@ -76,7 +76,7 @@ img {
 }
 
 
-.curso-feature span{
+.curso-feature > span{
 	height: 50px !important;
 	width: 50px !important;
 	background-color: #ffb52b33;
@@ -84,6 +84,7 @@ img {
 .curso-feature span i{
 	color: var(--upa-secondary-lighter);
 }
+
 .precios span{
 	height: 62px !important;
 	width: inherit !important;
@@ -96,7 +97,8 @@ img {
 .cursos button, 
 #formRegistro1 .btn-primary, 
 .form-comprobante .btn-primary,
-#form-login .btn-primary{
+#form-login .btn-primary,
+#page-404 .btn-primary{
 	transition: 0.5s;
 	background-size: 200% auto;
 	background-image: linear-gradient(
@@ -106,6 +108,21 @@ img {
 		var(--upa-secondary) 100%
 	);
     border: none;
+	width: 9em;
+	border-radius: 0.5rem;
+}
+
+.cursos button:focus, 
+#formRegistro1 .btn-primary:focus, 
+.form-comprobante .btn-primary:focus,
+#form-login .btn-primary:focus,
+#page-404 .btn-primary:focus,
+.cursos button:active, 
+#formRegistro1 .btn-primary:active, 
+.form-comprobante .btn-primary:active,
+#form-login .btn-primary:active,
+#page-404 .btn-primary:active{
+	box-shadow: 0 0 0 0.25rem #f2921d88;
 }
 
 .bg-light-gray{
@@ -118,7 +135,8 @@ img {
 .cursos button:hover, 
 #formRegistro1 .btn-primary:hover , 
 .form-comprobante .btn-primary:hover,
-#form-login .btn-primary:hover{
+#form-login .btn-primary:hover,
+#page-404 .btn-primary:hover{
 	background-position: right center;
 	color: #fff;
 	text-decoration: none;
@@ -694,11 +712,27 @@ input.bg-upa-secondary:focus {
 	background-color: var(--upa-secondary-lighter);
 }
 
-.user-details i{
+.user-details span{
+	width: 36px;
+	height: 36px;
+	background-color: #65bae433;
+	min-width: 36px;
+	min-height: 36px;
+}
+
+/* .user-details i::before{
+	width: 36px;
+	height: 36px;
+	background-color: red;
+	border-radius: 50rem;
+	padding: 0.5rem;
+} */
+
+/* .user-details i{
 	width: 32px !important;
 	height: 32px !important;
 	background-color: #65bae433;
-}
+} */
 
 .search-input:active,.search-input:focus{
 	box-shadow: none !important;
